force-app/main/default/objects/sumoapp__AccessSettings__c/sumoapp__AccessSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Access Settings</label>
</CustomObject>