force-app/main/default/objects/sumoapp__AccessSettings__c/fields/sumoapp__AllowCreatingEvents__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AllowCreatingEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow creating events in the multi-calendar</description>
    <inlineHelpText>Allow creating events in the multi-calendar</inlineHelpText>
    <label>Allow Creating Events</label>
    <type>Checkbox</type>
</CustomField>