force-app/main/default/objects/sumoapp__AccessSettings__c/fields/sumoapp__AllowDefineAvailability__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AllowDefineAvailability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Define Availability</label>
    <type>Checkbox</type>
</CustomField>