force-app/main/default/objects/sumoapp__AccessSettings__c/fields/sumoapp__DisableDescriptionUpdate__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__DisableDescriptionUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables filling and updating the event description</description>
    <label>Disable Description Update</label>
    <type>Checkbox</type>
</CustomField>