force-app/main/default/objects/sumoapp__AccessSettings__c/fields/sumoapp__PublicSite__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__PublicSite__c</fullName>
    <description>Site for generation public links</description>
    <inlineHelpText>Site for generation public links</inlineHelpText>
    <label>Public Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>